# overphloem

./: README.md  pyproject.toml
docs/: change_monitoring.md  examples.md  git_synchronization.md
overphloem/cli/: __init__.py  cli.py
overphloem/core/: __init__.py  events.py  file.py  project.py
overphloem/examples/: change_detector.sh  change_listener.py
overphloem/utils/: __init__.py  utils.py
tests/: __init__.py
